--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RubyTr</title>
+  <title>Ruby Türkiye</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "normalize.min.css" %>
+  <%= stylesheet_link_tag "base.css" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "modernizr-2.6.2-respond-1.1.0.min" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
