Added footer partial

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -60,8 +60,4 @@
   </div> <!-- #main -->
 </div> <!-- #main-container -->
 
-<div class="footer-container">
-  <footer class="wrapper">
-    <p>&copy; 2013 Ruby Türkiye</p>
-  </footer>
-</div>
+<%= render 'shared/footer' %>
