--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="header-container">
   <header class="wrapper clearfix">
     <h1 class="title">
-      <a href="index.html">
+      <a href="/">
         <%= image_tag "logo.png" %> Türkiye
       </a>
     </h1>
