--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -1,5 +1,45 @@
 <%= render 'shared/header' %>
 
-<%= @persons %>
+<div class="main-container">
+    <div class="main wrapper clearfix">
+    <br />
+        <ul class="people">
+            <li class="person">
+              <img src="http://www.gravatar.com/avatar/83cfa0588f13658f67feceb3ba1325fe/?s=150" />
+              <div class="person-details">
+                <h2>Destan Sarpkaya</h2>
+                <div class="social">
+                  <a href="http://dorukdestan.com/blog">
+                    <i class="fa fa-home fa-lg"></i>
+                  </a>
+                  <a href="https://github.com/destan">
+                    <i class="fa fa-github fa-lg"></i>
+                  </a>
+                  <a href="https://twitter.com/dorukdestan">
+                    <i class="fa fa-twitter fa-lg"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="person">
+              <img src="http://www.gravatar.com/avatar/7f6186e3d2fde8b2089a7bd235dc0349/?s=150" />
+              <div class="person-details">
+                <h2>Serdar Doğruyol</h2>
+                <div class="social">
+                  <a href="#">
+                    <i class="fa fa-home fa-lg"></i>
+                  </a>
+                  <a href="https://github.com/sdogruyol">
+                    <i class="fa fa-github fa-lg"></i>
+                  </a>
+                  <a href="https://twitter.com/sdogruyol">
+                    <i class="fa fa-twitter fa-lg"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+        </ul>
+    </div>
+</div> <!-- #main-container -->
 
 <%= render 'shared/footer' %>
