--- a/app/views/person/new.html.erb
+++ b/app/views/person/new.html.erb
@@ -2,7 +2,7 @@
 <div class="main-container">
   <div class="main wrapper clearfix">
     <br />
-    <%= form_for :person do |f| %>
+    <%= form_for :person, url: create_person_path do |f| %>
         <p>
           <%= f.label "Ad / Soyad" %><br>
           <%= f.text_field :name %>
@@ -12,6 +12,22 @@
           <%= f.label :email %><br>
           <%= f.text_field :email %>
         </p>
+
+        <p>
+          <%= f.label :blog %><br>
+          <%= f.text_field :web %>
+        </p>
+
+        <p>
+          <%= f.label :github %><br>
+          <%= f.text_field :github %>
+        </p>
+
+        <p>
+          <%= f.label :web %><br>
+          <%= f.text_field :web %>
+        </p>
+
 
         <p>
           <%= f.submit "Kaydet" %>
