Working version Missing social images

--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -2,6 +2,7 @@
 
 <div class="main-container">
     <div class="main wrapper clearfix">
+      <a class="button" href="people/new">Yeni Kişi Ekle</a>
     <br />
         <ul class="people">
           <% for person in @persons do %>
