Added font awesome

--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/header' %>
+<%= stylesheet_link_tag "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" %>
 
 <div class="main-container">
     <div class="main wrapper clearfix">
