--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
     </h1>
     <nav>
       <ul>
-        <li><a href="/people">Kişiler</a></li>
+        <li><a href="/people">Topluluk</a></li>
         <!--
         <li><a href="sunumlar.html">Sunumlar</a></li>
         <li><a href="ilanlar.html">İlanlar</a></li>
