Fixed add person view

--- a/app/views/person/new.html.erb
+++ b/app/views/person/new.html.erb
@@ -24,8 +24,8 @@
         </p>
 
         <p>
-          <%= f.label :web %><br>
-          <%= f.text_field :web %>
+          <%= f.label :twitter %><br>
+          <%= f.text_field :twitter %>
         </p>
 
 
