Added url helper

--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -12,7 +12,7 @@
               <div class="person-details">
                 <h2><%= person.name %></h2>
                 <div class="social">
-                  <a href="<%= person.web %>">
+                  <a href="<%= url_with_protocol person.web %>">
                     <i class="fa fa-home fa-lg"></i>
                   </a>
                   <a href="https://github.com/<%= person.github %>">
