Updated repo url

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,7 +17,7 @@
         <p>Ruby Türkiye topluluğu olarak sitemiz yayına girmiş bulunmaktadır. Uzun süredir yayına almak istediğimiz bu site, soğuk bir kış akşamı sıcak bir muhabbet ortamı yakaladığımız IRC kanalında
           bir anda hayata geçmeye başlamış ve çok kısa bir süre içinde tamamlanmıştır :) </p>
 
-        <p>Bu site tamamen GitHub üzerinde geliştirilmektedir. Eklemek istediğiniz birşey veya önerileriniz varsa <a href="https://github.com/rubytr/rubytr.github.io">GitHub adresimiz.</a> </p>
+        <p>Bu site tamamen GitHub üzerinde geliştirilmektedir. Eklemek istediğiniz birşey veya önerileriniz varsa <a href="https://github.com/rubytr/ruby-tr">GitHub adresimiz.</a> </p>
       </section>
       <!-- <section>
           <h2>article section h2</h2>
