--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -10,7 +10,7 @@
       </header>
       <section>
         <h2>Hakkımızda sayfası güncellenmiştir.</h2>
-        <p>Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <a href="hakkimizda.html">buradan</a> erişebilirsiniz.</p>
+        <p>Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <a href="/people">buradan</a> erişebilirsiniz.</p>
       </section>
       <section>
         <h2>Ruby Türkiye Sitesi Yayında</h2>
@@ -19,14 +19,6 @@
 
         <p>Bu site tamamen GitHub üzerinde geliştirilmektedir. Eklemek istediğiniz birşey veya önerileriniz varsa <a href="https://github.com/rubytr/ruby-tr">GitHub adresimiz.</a> </p>
       </section>
-      <!-- <section>
-          <h2>article section h2</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-      </section>
-      <footer>
-          <h3>article footer h3</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-      </footer> -->
 
     </article>
 
