--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,50 +2,46 @@
 
 <div class="main-container">
   <div class="main wrapper clearfix">
+    <div class="index">
+      <article>
+        <header>
+          <h1>Hakkımızda sayfası güncellenmiştir</h1>
+        </header>
+        <section>
+          Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <a href="/people">buradan</a> erişebilirsiniz.
+        </section>
+      </article>
 
-    <article>
-      <header>
-        <h1>Ruby Türkiye Topluluğu</h1>
-        <p></p>
-      </header>
-      <section>
-        <h2>Hakkımızda sayfası güncellenmiştir.</h2>
-        <p>Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <a href="/people">buradan</a> erişebilirsiniz.</p>
-      </section>
-      <section>
-        <h2>Ruby Türkiye Sitesi Yayında</h2>
+      <article>
+        <header>
+          <h1>Ruby Türkiye Sitesi Yayında</h1>
+        </header>
+        <section>
         <p>Ruby Türkiye topluluğu olarak sitemiz yayına girmiş bulunmaktadır. Uzun süredir yayına almak istediğimiz bu site, soğuk bir kış akşamı sıcak bir muhabbet ortamı yakaladığımız IRC kanalında
-          bir anda hayata geçmeye başlamış ve çok kısa bir süre içinde tamamlanmıştır :) </p>
+        bir anda hayata geçmeye başlamış ve çok kısa bir süre içinde tamamlanmıştır :) </p>
 
         <p>Bu site tamamen GitHub üzerinde geliştirilmektedir. Eklemek istediğiniz birşey veya önerileriniz varsa <a href="https://github.com/rubytr/ruby-tr">GitHub adresimiz.</a> </p>
-      </section>
-
-    </article>
+        </section>
+      </article>
+    </div>
 
     <aside>
       <h3>Ruby Türkiye nedir?</h3>
-      <p>Türkiye'deki Ruby programcıları ve Ruby severler
-        topluluğudur. Ruby ile program yazan ve ilgilenen herkese
-        kapımız açıktır.</p>
+      Türkiye'deki Ruby programcıları ve Ruby severler
+      topluluğudur. Ruby ile program yazan ve ilgilenen herkese
+      kapımız açıktır.
 
       <h3>Nasıl iletişim kurabilirim?</h3>
-      <p>
       <ul>
-        <li><p>#ruby-tr (IRC/freenode) </p></li>
-        <li><p>Ruby Türkiye google grubu</p></li>
+        <li>#ruby-tr (IRC/freenode)</li>
+        <li>Ruby Türkiye google grubu</li>
       </ul>
-      </p>
 
       <h3>Nasıl yardım alabilirim?</h3>
-      <p>
-        IRC kanalımızda veya google grubumuzda sorularınızı paylaşabilirsiniz.
-      </p>
+      IRC kanalımızda veya mail listemizde sorularınızı paylaşabilirsiniz.
 
       <center>
-        <a class="button"
-           href="https://groups.google.com/forum/#!forum/ruby-tr">
-          Listemize kaydolun!
-        </a>
+        <a class="button" href="https://groups.google.com/forum/#!forum/ruby-tr">Mail Listemize Kaydolun!</a>
       </center>
     </aside>
 
