--- a/app/views/person/new.html.erb
+++ b/app/views/person/new.html.erb
@@ -4,7 +4,7 @@
     <br />
     <%= form_for @person, url: create_person_path do |f| %>
         <p>
-          <%= f.label "Ad / Soyad" %><br>
+          <%= f.label "Ad Soyad" %><br>
           <%= f.text_field :name %>
         </p>
 
