--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -4,7 +4,7 @@
     <br />
     <%= form_for @person, url: create_person_path do |f| %>
         <p>
-          <%= f.label "Ad Soyad" %><br>
+          <%= f.label :name, 'Ad soyad' %><br>
           <%= f.text_field :name %>
         </p>
 
@@ -14,17 +14,17 @@
         </p>
 
         <p>
-          <%= f.label :blog %><br>
+          <%= f.label :web, 'Blog' %><br>
           <%= f.text_field :web %>
         </p>
 
         <p>
-          <%= f.label :github %><br>
+          <%= f.label :github, 'Github kullanıcı adı' %><br>
           <%= f.text_field :github %>
         </p>
 
         <p>
-          <%= f.label :twitter %><br>
+          <%= f.label :twitter, 'Twitter kullanıcı adı' %><br>
           <%= f.text_field :twitter %>
         </p>
         <p>
