use resources in routes

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,7 +8,7 @@
           <h1>Hakkımızda sayfası güncellenmiştir</h1>
         </header>
         <section>
-          Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <a href="/people">buradan</a> erişebilirsiniz.
+          Topluluğumuz üyelerini bulabileceğiniz sayfamız güncellenmiş olup, <%= link_to 'buradan', people_path %> erişebilirsiniz.
         </section>
       </article>
 
