--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,8 @@
     <nav>
       <ul>
         <li><a href="/people">Topluluk</a></li>
+        <li><%= link_to "Mail Grubu", page_path("group") %></li>
+        <li><%= link_to "#ruby-tr IRC", page_path("irc") %></li>
         <!--
         <li><a href="sunumlar.html">Sunumlar</a></li>
         <li><a href="ilanlar.html">İlanlar</a></li>
@@ -15,5 +17,4 @@
       </ul>
     </nav>
   </header>
-
 </div>
