--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="footer-container">
-  <footer class="wrapper">
-    <p>&copy; 2013 Ruby Türkiye</p>
-  </footer>
+<div id="footer">
+  <div class="container">
+    <p class="pull-left">&copy; <%= Time.now.year %> - Ruby Türkiye</p>
+  </div>
 </div>
