--- a/app/assets/stylesheets/config.less
+++ b/app/assets/stylesheets/config.less
@@ -1,7 +1,8 @@
-@font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+@font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 // Colors
 @base: #585450;
 @inverse: #CC342D;
 @light: #FFFFFF;
 @lightgray: #EAEAEA;
+@copy: #555555;
