Semantic markup for group and irc pages

--- a/app/views/pages/irc.html.erb
+++ b/app/views/pages/irc.html.erb
@@ -1,9 +1,9 @@
-<%= render "shared/header" %>
-<div class="main-container">
-	<div class="main wrapper clearfix">
-	<h3>#ruby-tr IRC kanalı:</h3>
-		<iframe src="http://webchat.freenode.net?channels=%23ruby-tr" width="960" height="600"></iframe>
-	</div>
+<div class="content">
+  <div class="container">
+    <h2>Ruby Türkiye IRC Kanalı</h2>
+    <iframe src="http://webchat.freenode.net?channels=%23ruby-tr" width="100%" height="600"></iframe>
+    <!-- https://support.google.com/groups/answer/1191206?hl=en --> 
+  </div>
+  <!--/ .container -->
 </div>
-
-<%= render "shared/footer" %>
+<!--/ .content -->
