--- a/app/views/pages/group.html.erb
+++ b/app/views/pages/group.html.erb
@@ -1,19 +1,9 @@
-<%= render "shared/header" %>
-<div class="main-container">
-	<div class="main wrapper clearfix">
-	<h3>Ruby-TR google mail grubu:</h3>
-		<iframe id="forum_embed"
- src="javascript:void(0)"
- scrolling="no"
- frameborder="0"
- width="960"
- height="600">
-		</iframe>
-	</div>
-	<!-- https://support.google.com/groups/answer/1191206?hl=en --> 
+<div class="content">
+  <div class="container">
+    <h2>Ruby Türkiye Mail Grubu</h2>
+    <iframe id="forum_embed" src="javascript:void(0)" scrolling="no" frameborder="0" width="100%" height="600"></iframe>
+    <!-- https://support.google.com/groups/answer/1191206?hl=en --> 
+  </div>
+  <!--/ .container -->
 </div>
-
-
-<%= javascript_include_tag "googlegroups" %>
-
-<%= render "shared/footer" %>
+<!--/ .content -->
