Semantic markup for people page

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -134,6 +134,37 @@ header {
       border-bottom: none;
     }
   }
+
+  .page-actions {
+    text-align: right;
+    margin-bottom: 25px;
+  }
+
+  .thumbnail {
+
+    h3 {
+      color: @base;
+      line-height: normal;
+      margin: 10px 5px;
+      padding: 0;
+      font-size: 18px;
+    }
+
+    .social {
+      padding: 0 5px;
+      margin-bottom: 10px;
+
+      .btn-twitter {
+        background-color: @twitter;
+        color: @light;
+      }
+
+      .btn-github {
+        background-color: @github;
+        color: @light;
+      }
+    }
+  }
 }
 
 #footer {
