Semantic markup for new person page

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -165,6 +165,12 @@ header {
       }
     }
   }
+
+  em.error {
+    color: @inverse;
+    display: block;
+    margin-top: 10px;
+  }
 }
 
 #footer {
