--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,56 +1,65 @@
-<%= render 'shared/header' %>
-<div class="main-container">
-  <div class="main wrapper clearfix">
-    <br />
-    <%= form_for @person do |f| %>
-        <p>
-          <%= f.label :name %><br>
-          <%= f.text_field :name %>
-          <% if @person.errors.has_key?(:name) %>
-            <%= @person.errors[:name].join(',') %>
-          <% end %>
-        </p>
+<div class="content">
+  <div class="container">
+    <h2>Yeni Kişi Kaydı</h2>
+    
+    <div class="row">
+      <div class="col-md-5">
+        
+        <%= form_for @person do |f| %>
+          <div class="form-group">
+            <%= f.label :name %><br>
+            <%= f.text_field :name, class: "form-control" %>
+            <% if @person.errors.has_key?(:name) %>
+              <em class="error"><%= @person.errors[:name].join(',') %></em>
+            <% end %>
+          </div>
 
-        <p>
-          <%= f.label :email %><br>
-          <%= f.text_field :email %>
-          <% if @person.errors.has_key?(:email) %>
-            <%= @person.errors[:email].join(',') %>
-          <% end %>
-        </p>
+          <div class="form-group">
+            <%= f.label :email %><br>
+            <%= f.text_field :email, class: "form-control" %>
+            <% if @person.errors.has_key?(:email) %>
+              <em class="error"><%= @person.errors[:email].join(',') %></em>
+            <% end %>
+          </div>
 
-        <p>
-          <%= f.label :web %><br>
-          <%= f.text_field :web %>
-        </p>
+          <div class="form-group">
+            <%= f.label :web %><br>
+            <%= f.text_field :web, class: "form-control" %>
+          </div>
 
-        <p>
-          <%= f.label :github %><br>
-          <%= f.text_field :github %>
-        </p>
+          <div class="form-group">
+            <%= f.label :github %><br>
+            <%= f.text_field :github, class: "form-control" %>
+          </div>
 
-        <p>
-          <%= f.label :twitter %><br>
-          <%= f.text_field :twitter %>
-        </p>
+          <div class="form-group">
+            <%= f.label :twitter %><br>
+            <%= f.text_field :twitter, class: "form-control" %>
+          </div>
 
-        <p>
-          <%= f.label :humanizer_answer, @person.humanizer_question %>
-        </p>
-        <p>
-          <%= f.text_field :humanizer_answer %>
-          <% if @person.errors.has_key?(:humanizer_answer) %>
-            <%= @person.errors[:humanizer_answer].join(',') %>
-          <% end %>
-        </p>
+          <div class="form-group">
+            <%= f.label :humanizer_answer, @person.humanizer_question %>
+          </div>
 
-        <%= f.hidden_field :humanizer_question_id %>
+          <div class="form-group">
+            <%= f.text_field :humanizer_answer, class: "form-control" %>
+            <% if @person.errors.has_key?(:humanizer_answer) %>
+              <%= @person.errors[:humanizer_answer].join(',') %>
+            <% end %>
+          </div>
 
-        <p>
-          <%= f.submit 'Kaydet' %>
-        </p>
-    <% end %>
+          <%= f.hidden_field :humanizer_question_id %>
+
+          <div class="form-group">
+            <%= f.submit 'Kaydet', class: "btn btn-success" %>
+          </div>
+        <% end %>
+
+      </div>
+    </div>
+    <!--/ .row -->
+
   </div>
+  <!--/ .container -->
 </div>
-
-<%= render 'shared/footer' %>
+<!--/ .content -->
