Replace less with sass

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,7 @@
 @import "font-awesome";
-@import "twitter/bootstrap";
+@import "bootstrap";
 
 @import "app/assets/stylesheets/config";
-@import "app/assets/stylesheets/responsive";
 
 html, body {
   height: 100%;
