Logo change with noel hat.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
       <h1 id="logo">
         <a href="/">
-          <%= image_tag "logo.png" %> <span>Türkiye</span>
+          <%= image_tag "logo_noel.png" %> <span>Ruby Türkiye</span>
         </a>
       </h1>
 
